--- a/index..html
+++ b/index..html
@@ -29,26 +29,26 @@
                 <!-- Get First Name-->
                 <div class="mb-3">
                     <label for="firstName" class="form-label">First Name</label>
-                    <input type="text" class="form-control" id="firstName" placeholder="Enter your first name">
+                    <input type="text" class="form-control" id="firstName" placeholder="Enter your first name" required>
                 </div>
                 <!-- Get Last Name-->
                 <div class="mb-3">
                     <label for="firstName" class="form-label">First Name</label>
-                    <input type="text" class="form-control" id="lastName" placeholder="Enter your first name">
+                    <input type="text" class="form-control" id="lastName" placeholder="Enter your first name" required>
                 </div>
                 <!-- Get FavColor-->
                 <div class="mb-3">
                     <label for="favoriteColor" class="form-label">Favorite Color</label>
-                    <input type="text" class="form-control" id="favoriteColor" placeholder="Enter your favorite color">
+                    <input type="text" class="form-control" id="favoriteColor" placeholder="Enter your favorite color" required>
                 </div>
                 <!-- Get FavAnimal-->
                 <div class="mb-3">
                     <label class="form-label">Favorite Animal</label>
-                    <input type="text" class="form-control" id="favoriteAnimal" placeholder="Enter your favorite animal">
+                    <input type="text" class="form-control" id="favoriteAnimal" placeholder="Enter your favorite animal" required>
                 </div>
                 <!-- Get roadType-->
                 <div class="mb-3">
-                    <label  class="form-label">Choose Road Type</label>
+                    <label class="form-label">Choose Road Type</label>
                     <select id="roadType" class="form-select">
                         <option selected>Select Road Type</option>
                         <option value="road">Road</option>
